--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,8 +3,25 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Exo 2";
-    background-color: #fefae0;
+    background-color: #faedcd;
 }
+.login{
+  width: 60vw;
+  margin-left: 30vw;
+  
+}
+.login button{
+    max-width: 20vw;
+    margin-left: 20vw;
+  }
+.login #reg_form input{
+    max-width: 40vw;
+    height: 24px;
+    border-radius: 12px;
+    background-color: #C9FF33;
+    border-color: #333;
+    color: #000;
+  }
     .note-item{
     margin: 2.5%;
     padding: 0px 10px;
@@ -131,52 +148,4 @@ body{
       #logoutButton{
         background-color: #e63946;
         width: 20%;
-     }
-    @media screen and (max-width: 768px) {
-        body {
-         padding: 0;
-         margin: 10px;
-         overflow-x: hidden; /* Запобігає горизонтальній прокрутці */
-        }
-     
-        .menu {
-         display: flex;
-         flex-direction: column; /* Розташовує елементи вертикально */
-         justify-content: center; /* Центрує елементи меню по горизонталі */
-         align-items: center; /* Центрує елементи меню по вертикалі */
-         gap: 20px; /* Відстань між елементами меню */
-         width: 100%; /* Займає всю доступну ширину */
-       }
-     
-       .menu-el {
-         width: 100%; /* Елементи меню займають всю ширину */
-         display: flex;
-         justify-content: center; /* Центруємо текст всередині елемента */
-         align-items: center; /* Центруємо текст по вертикалі */
-       }
-     
-       button {
-         width: 100%; /* Кнопки займають всю ширину */
-         padding: 10px;
-         background-color: #a3b18a; /* Колір фону кнопок */
-         color: white; /* Колір тексту */
-         border: none; /* Без рамки */
-         font-size: 16px;
-         text-align: center;
-         cursor: pointer; /* Курсор при наведенні */
-         transition: background-color 0.3s; /* Плавна зміна фону при наведенні */
-         border-radius: 12px;
-       }
-     
-       button:hover {
-         background-color: #8c9e71; /* Колір фону при наведенні */
-       }
-     
-       a {
-         text-decoration: none; /* Прибирає підкреслення з посилання */
-         color: inherit; /* Спадковий колір для тексту */
-       }
-       #logoutButton{
-        width: 100%;
-       }
      }
