--- a/CSS/media.css
+++ b/CSS/media.css
@@ -16,7 +16,7 @@
         margin-left: 35vw;
     }
     .login #reg_form input{
-        max-width: 20px;
+        max-width: 80vw;
         height: 24px;
         border-radius: 12px;
         background-color: #C9FF33;
