--- a/CSS/media.css
+++ b/CSS/media.css
@@ -12,7 +12,8 @@
         
     }
     .login button{
-        max-width: 20vw;
+        max-width: 50vw;
+        min-width: 20vw;
         margin-left: 35vw;
     }
     .login #reg_form input{
